[package]
name = "ignition-9p-wire"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"

[dev-dependencies]
ignition-9p-wire-derive = { path = "../ignition-9p-wire-derive" }
