[package]
name = "ignition-api"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = { version = "0.9", features = ["mutex"] }
