[package]
name = "ignition-blob"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
bytes = "0.6.0"
hex = "0.4.2"
http = "0.2.1"
hyper = "0.13.9"
log = "0.4.11"
rand = "0.7.3"
sha2 = "0.9.2"
simple_logger = "1.11.0"
tokio-compat-02 = "0.1.2"
warp = "0.2.5"

[dependencies.tokio]
version = "0.3.4"
features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread"]
