[package]
name = "ignition-blob"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
blake3 = "0.3"
bytes = "1"
futures-util = "0.3"
hex = "0.4"
http = "0.2"
hyper = "0.14"
ignition-blob-proto = { path = "../ignition-blob-proto" }
log = "0.4"
prost = "0.7"
rand = "0.8"
simple_logger = "1"
testable-file-system = { path = "../testable-file-system" }
thiserror = "1"
tokio-stream = "0.1"
tonic = "0.4"

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "macros", "net", "rt-multi-thread"]
