[package]
name = "ignition-demo-9p-server"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
clap = "2"
futures-util = { version = "0.3", features = ["sink"] }
ignition-9p = { path = "../ignition-9p" }
lazy_static = "1"
log = "0.4"
pin-utils = "0.1"
simple_logger = "1"
thiserror = "1"
tokio-util = { version = "0.6", features = ["codec"] }

[dependencies.tokio]
version = "1"
features = ["macros", "net", "rt-multi-thread", "sync"]
