[package]
name = "ignition-host"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
chrono = "0.4"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
lazy_static = "1"
replace_with = "0.1"
slab = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wasmtime = "0.30"
