[package]
name = "testable-file-system"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hex = "0.4"
rand = "0.8"

[dependencies.tokio]
version = "1"
features = ["fs", "io-util"]
