[package]
name = "ignition-9p"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
http = "0.2.1"
hyper = "0.13.9"
log = "0.4.11"
simple_logger = "1.11.0"
tokio = { version = "0.2.22", features = ["full"] }
