[package]
name = "ignition-9p"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
byteorder = "1.3.4"

[dependencies.derive_more]
version = "0.99.11"
default-features = false
features = ["add", "add_assign"]
