[package]
name = "ignition-blob"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "0.5"
hex = "0.4"
http = "0.2"
hyper = "0.13"
log = "0.4"
rand = "0.7"
sha2 = "0.9"
simple_logger = "1"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
