[package]
name = "ignition-echo-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
crate-type = ["cdylib"]

[dependencies]
ignition-guest = { path = "../ignition-guest" }
ignition-guest-panic-abort = { path = "../ignition-guest-panic-abort" }
wee_alloc = "0.4"
