[package]
name = "ignition-guest"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[dependencies]
futures-io = { version = "0.3", default-features = false }
lazy_static = { version = "1", features = ["spin_no_std"] }
slab = { version = "0.4", default-features = false }
spin = { version = "0.9", features = ["mutex"] }
