[package]
name = "ignition-guest"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[dependencies]
futures-io = { version = "0.3" }
lazy_static = { version = "1" }
slab = { version = "0.4" }
