[package]
name = "ignition-hello-world"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
ignition-guest = { path = "../ignition-guest" }
wee_alloc = "0.4"
