[package]
name = "ignition-impulse-bench"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3" }
ignition-guest = { path = "../ignition-guest" }
